# toolkit-forge-sdd

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
.github/instructions/: prompt.instructions.md
.github/prompts/: toolkit-forge.prompt.md
.github/workflows/: release.yml
src/toolkit_forge_cli/: __init__.py  cli.py
src/toolkit_forge_cli/data/: __init__.py
src/toolkit_forge_cli/data/.github/instructions/: copilot-instructions.md  implementation-task-patterns.instructions.md
src/toolkit_forge_cli/data/.github/instructions/orchestrators/: forge-architect.instructions.md  forge-assess.instructions.md  forge-ideate.instructions.md  forge-implement.instructions.md  forge-plan.instructions.md
src/toolkit_forge_cli/data/.github/prompts/: forge-assess.prompt.md  forge-implement.prompt.md  forge-plan.prompt.md
src/toolkit_forge_cli/data/.github/prompts/orchestrators/: README.md  forge-architect.prompt.md
src/toolkit_forge_cli/data/.toolkit-forge-sdd/docs/best-practices/: forge-custom-ui-architecture.md  forge-project-setup.md
src/toolkit_forge_cli/data/.toolkit-forge-sdd/docs/sdd/: README.md  USAGE.md  metadata-schema.md
src/toolkit_forge_cli/data/.toolkit-forge-sdd/scripts/sdd/: README.md  check-prereqs.sh  (+2 more)
toolkit-cli/: README.md  pyproject.toml
toolkit-cli/src/toolkit_forge_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
toolkit/docs/best-practices/: forge-custom-ui-architecture.md
toolkit/instructions/: copilot-instructions.md
toolkit/prompts/: forge-architect.prompt.md
toolkit/templates/configs/: gitignore-template.md
(+35 files in other folders)
