[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "toolkit-forge-cli"
version = "0.1.4"
description = "CLI to initialize the Forge SDD toolkit structure"
readme = "README.md"
authors = [
  { name = "Toolkit Forge Maintainers" }
]
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = []

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[project.scripts]
toolkit-forge = "toolkit_forge_cli.cli:main"

[tool.setuptools.package-data]
toolkit_forge_cli = ["data/**/*"]
